Thu Dec  9 06:26:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->unlinked_method_entry_list shall
	  be sweeped.

Thu Dec  9 06:17:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): FinalVM_generic_iv_tbl needs (yet
	  another) special care.  When an objspace terminates it nees be.

Thu Dec  9 05:39:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): deferred finalizers shall be called here.

Thu Dec  9 04:55:10 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (InitVM_global_iv_tbl): Well, prior to this change
	  rb_generic_iv_tbl was created using Data_Wrap_Struct, but this
	  was wrong, because that needs an object allocation, an object
	  allocation needs GC, and GC needs rb_generic_iv_tbl itself.

Thu Dec  9 04:16:39 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (sym_str_new): rb_str_cat was also wrong idea, because
	  it can call xrealloc. symbols are handled in a dedicated
	  objspace so allocations should also happen inside of it.

Thu Dec  9 02:58:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h: type mismatch.

	* include/ruby/ruby.h : ditto.

	* mvm.c (ruby_vm_specific_ptr): ditto.

Thu Dec  9 01:18:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->specific_storage.ptr had same
	  constraint as vm->cache.

Thu Dec  9 00:49:43 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): rb_ary_clear was insufficient,
	  because that can internally call realloc (for instance when the
	  array is shared).  Just leaving it to GC should suffice.

Thu Dec  9 00:09:58 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/vm.h: I believe this function can now handle
	  arbitrary pointers.

	* include/ruby/ruby.h: ditto.

	* mvm.c (ruby_vm_specific_ptr): ditto.

	* vm_core.h (rb_vm_struct): ditto.

	* ruby.c (proc_options): ditto.

	* io.c (ruby_vm_argf): ditto.
