@@ -1,3 +1,9 @@
+Thu Dec  9 06:46:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm.c (ruby_vmptr_destruct): vm->loading_table shall be freed.
+	  On a normal run a vm->loading_table is empty, but I'm not sure
+	  if it is always, so deleting its internals just for sure.
+
 Thu Dec  9 06:26:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* vm.c (ruby_vmptr_destruct): vm->unlinked_method_entry_list shall
